VERSION 0.21 (2017-12-27)
  * Repository cache handling enhanced. It is recached if older than 1 week.
  * Fixed repository caching for R 3.2
  * Then packing project dest R version is not checked.

VERSION 0.20 (2017-12-08)
  * Caching of available packages from each repository to build faster with CLI.
  * While building project packages it detects changes in package sources.
     If no changes detected package will not be rebuilt and package from intrepo
     will be installed.
  * Remote packages downloaded are cached. So next time they are ready which
     reduces dependency collection time.
  * Fix in package version comparison

VERSION 0.19 (2017-11-23)
  * Detection imports in package NAMESPACE fixed to support comma separated lists.
  * Defaut set_env.R fixed to create user specific log file if has no access to default.
  * Version restriction handling fixed, tests created.
  * GitHub package building fixed to support Git repositories requiring all Git
     repository structure to build properly (e.g. Microsoft/LightGBM).
  * There is not requirement for package to have same name as package folder.
  * It is possible to skip some preliminary steps while building project packages
     or packages from github (to put into PIGZIP or to add to repository).
  * While building package from github it is possible to keep its sources after
     build finished.
  * fixing package index in repository for R3.4 fixed for case of removing last
     package in repository.

VERSION 0.18 (2017-11-13)
  * #150: checking if R version is available early while installing deps, building,
     zipping and packing.
  * for R3.4 it does not creates PACAKGES.rds (and removes it if found in repo) as
     it does not support multiple package versions.

VERSION 0.17 (2017-11-11)
  * prj_pack can be told to pack only selected project packages or not to include
     master scripts in the pack.
  * fixed bug in package version requirements detection. It used to create large