@@ -46,7 +46,11 @@ source(file.path(base, "docker_utils.R"))
   }
   run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj depsinst -v", prj_name)) # ...
   run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj build -v", prj_name)) # ...
-  run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj zip -v -p /opt", prj_name)) # ...
+  cmd <- sprintf("cd %s && rsuite proj zip -v -p /opt", prj_name)
+  if (!is.null(version)) {
+    cmd <- paste0(cmd, " --version=", version)
+  }
+  run_incont_cmd(cont_name, cmd) # ...
 
   zip_name <- gsub("^[^_]+_", "", basename(pack_fpath))
   zip_fpath <- file.path(dest_dir, zip_name)
